Symmetrize on small objects destroys geometry #75977

Closed
opened 2020-04-21 20:22:11 +02:00 by Konstantin Kharkovschenko · 6 comments

System Information
Operating system: Linux-5.3.0-45-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 560 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-17 20:06, hash: 0fe8239470
Worked: (newest version of Blender that worked as expected)

Short description of error
When I try to symmetrize a small object (smaller then 0.01 unit) operator destroys all vertex near symmertry plane. It creates totally flat mesh if object is smaller then 0.001 unit wide. However, if dyntopo is turned on it works as intended.

{F8487785}screen1.png

Exact steps for others to reproduce the error

  • Add a monkey
  • Apply remesh modifier (0.1m)
  • scale 0.01
  • apply scale
  • go to sculpt mode
  • symmetrize x
    or
  • open attached file
  • symmetrize x
    symmetrize_bug.blend
**System Information** Operating system: Linux-5.3.0-45-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 560 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.90 (sub 0), branch: master, commit date: 2020-04-17 20:06, hash: `0fe8239470` Worked: (newest version of Blender that worked as expected) **Short description of error** When I try to symmetrize a small object (smaller then 0.01 unit) operator destroys all vertex near symmertry plane. It creates totally flat mesh if object is smaller then 0.001 unit wide. However, if dyntopo is turned on it works as intended. {[F8487785](https://archive.blender.org/developer/F8487785/screen.png)}![screen1.png](https://archive.blender.org/developer/F8487790/screen1.png) **Exact steps for others to reproduce the error** - Add a monkey - Apply remesh modifier (0.1m) - scale 0.01 - apply scale - go to sculpt mode - symmetrize x or - open attached file - symmetrize x [symmetrize_bug.blend](https://archive.blender.org/developer/F8487805/symmetrize_bug.blend)

Added subscriber: @Morphin

Added subscriber: @Morphin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In edit mode, (after selecting all vertices), symmetrize works well.
But in sculpt mode the problem is seen.

In edit mode, (after selecting all vertices), symmetrize works well. But in sculpt mode the problem is seen.

This issue was referenced by aa02a05bc7

This issue was referenced by aa02a05bc7a841b5762b34537c8cd27a25781177
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-05-20 03:33:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75977
No description provided.